tests/build_fail/bseq_fail_hex_i32_overflow.stderr
error: literal out of range for `i32`
 --> tests/build_fail/bseq_fail_hex_i32_overflow.rs:4:19
  |
4 |     let _ = bseq!(0xffffffff);
  |                   ^^^^^^^^^^
  |
  = note: the literal `0xffffffff` (decimal `4294967295`) does not fit into the type `i32` and will become `-1i32`
  = help: consider using the type `u32` instead
  = note: `#[deny(overflowing_literals)]` on by default
