tests/build_fail/bseq_fail_hex_i32_overflow.rs
use bit_seq::bseq;

fn main() {
    let _ = bseq!(0xffffffff);
}